// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toEditMessage should fail due to message was not edited by the bot (no messageIdentifier as object with content) 1`] = `
Object {
  "message": "    
    expected: testing bot to edit the message of content \\"message test\\"
    received: message was not edited
",
  "pass": false,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should fail due to message was not edited by the bot (no messageIdentifier as object with id) 1`] = `
Object {
  "message": "    
    expected: testing bot to edit the message of id 123
    received: message was not edited
",
  "pass": false,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should fail due to message was not edited by the bot (no messageIdentifier as string) 1`] = `
Object {
  "message": "    
    expected: testing bot to edit the message of id 123
    received: message was not edited
",
  "pass": false,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should fail due to message was not edited by the bot (no messageIdentifier) 1`] = `
Object {
  "message": "    
    expected: testing bot to edit the last message sent
    received: message was not edited
",
  "pass": false,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should get fail test due to bot returned different messages (both embed) 1`] = `
Object {
  "message": "    
    - expected  - 10
    + received  +  8
    
      Object {
        \\"author\\": Object {
    -     \\"icon_url\\": \\"https://i.imgur.com/wSTFkRM.png\\",
    -     \\"name\\": \\"Some name\\",
    -     \\"url\\": \\"https://discord.js.org\\",
    +     \\"icon_url\\": undefined,
    +     \\"name\\": \\"Test\\",
    +     \\"url\\": undefined,
        },
    -   \\"color\\": 39423,
    -   \\"description\\": \\"Some description here\\",
    +   \\"color\\": null,
    +   \\"description\\": null,
        \\"fields\\": Array [
          Object {
            \\"inline\\": false,
            \\"name\\": \\"Regular field title\\",
            \\"value\\": \\"Some value here\\",
          },
          Object {
            \\"inline\\": false,
            \\"name\\": \\"​\\",
            \\"value\\": \\"​\\",
          },
          Object {
            \\"inline\\": true,
            \\"name\\": \\"Inline field title\\",
            \\"value\\": \\"Some value here\\",
          },
          Object {
            \\"inline\\": true,
            \\"name\\": \\"Inline field title\\",
            \\"value\\": \\"Some value here\\",
          },
        ],
        \\"footer\\": null,
        \\"image\\": null,
    -   \\"thumbnail\\": Object {
    -     \\"url\\": \\"https://i.imgur.com/wSTFkRM.png\\",
    -   },
    +   \\"thumbnail\\": null,
        \\"timestamp\\": null,
    -   \\"title\\": \\"Some title\\",
    +   \\"title\\": null,
        \\"type\\": \\"rich\\",
    -   \\"url\\": \\"https://discord.js.org/\\",
    +   \\"url\\": null,
      }
",
  "pass": false,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should get fail test due to bot returned different messages (expect embed and returned primitive) 1`] = `
Object {
  "message": "    
    expected: Object {
      \\"author\\": Object {
        \\"icon_url\\": \\"https://i.imgur.com/wSTFkRM.png\\",
        \\"name\\": \\"Some name\\",
        \\"url\\": \\"https://discord.js.org\\",
      },
      \\"color\\": 39423,
      \\"description\\": \\"Some description here\\",
      \\"fields\\": Array [
        Object {
          \\"inline\\": false,
          \\"name\\": \\"Regular field title\\",
          \\"value\\": \\"Some value here\\",
        },
        Object {
          \\"inline\\": false,
          \\"name\\": \\"​\\",
          \\"value\\": \\"​\\",
        },
        Object {
          \\"inline\\": true,
          \\"name\\": \\"Inline field title\\",
          \\"value\\": \\"Some value here\\",
        },
        Object {
          \\"inline\\": true,
          \\"name\\": \\"Inline field title\\",
          \\"value\\": \\"Some value here\\",
        },
      ],
      \\"footer\\": null,
      \\"image\\": null,
      \\"thumbnail\\": Object {
        \\"url\\": \\"https://i.imgur.com/wSTFkRM.png\\",
      },
      \\"timestamp\\": null,
      \\"title\\": \\"Some title\\",
      \\"type\\": \\"rich\\",
      \\"url\\": \\"https://discord.js.org/\\",
    }
    received: 'this is the message content'
",
  "pass": false,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should get fail test due to bot returned different messages (expect primitive and returned embed) 1`] = `
Object {
  "message": "    
    expected: 'expect value'
    received: Object {
      \\"author\\": Object {
        \\"icon_url\\": \\"https://i.imgur.com/wSTFkRM.png\\",
        \\"name\\": \\"Some name\\",
        \\"url\\": \\"https://discord.js.org\\",
      },
      \\"color\\": 39423,
      \\"description\\": \\"Some description here\\",
      \\"fields\\": Array [
        Object {
          \\"inline\\": false,
          \\"name\\": \\"Regular field title\\",
          \\"value\\": \\"Some value here\\",
        },
        Object {
          \\"inline\\": false,
          \\"name\\": \\"​\\",
          \\"value\\": \\"​\\",
        },
        Object {
          \\"inline\\": true,
          \\"name\\": \\"Inline field title\\",
          \\"value\\": \\"Some value here\\",
        },
        Object {
          \\"inline\\": true,
          \\"name\\": \\"Inline field title\\",
          \\"value\\": \\"Some value here\\",
        },
      ],
      \\"footer\\": null,
      \\"image\\": null,
      \\"thumbnail\\": Object {
        \\"url\\": \\"https://i.imgur.com/wSTFkRM.png\\",
      },
      \\"timestamp\\": null,
      \\"title\\": \\"Some title\\",
      \\"type\\": \\"rich\\",
      \\"url\\": \\"https://discord.js.org/\\",
    }
",
  "pass": false,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should get fail test due to bot returned different messages both primitive values 1`] = `
Object {
  "message": "    
    expected: 'expect value'
    received: 'this is the message content'
",
  "pass": false,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should get failed test due to bot returned equal messages (isNot true) 1`] = `
Object {
  "message": "    
    expected: message from bot be different from expectation
    received: both returned and expectation are equal
",
  "pass": false,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should get success test due to bot returned different messages (isNot true) 1`] = `
Object {
  "pass": true,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should get success test due to bot returned equal message 1`] = `
Object {
  "pass": true,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should get success test due to bot returned equal messages (string number) 1`] = `
Object {
  "pass": true,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should get success test due to bot returned equal messages (string type) 1`] = `
Object {
  "pass": true,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should get success test due to bot returned equal messages (type embed) 1`] = `
Object {
  "pass": true,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should get success test due to timeout but isNot = true 1`] = `
Object {
  "pass": true,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should return a failed test due to invalid parameter (null) 1`] = `
Object {
  "message": "    
    expected: expect value to be a primitive value (string, boolean, number) or an MessageEmbedLike object
    received: null
",
  "pass": false,
  "testName": "toEditMessage",
}
`;

exports[`testing toEditMessage should return a failed test due to invalid parameter (undefined) 1`] = `
Object {
  "message": "    
    expected: expect value to be a primitive value (string, boolean, number) or an MessageEmbedLike object
    received: undefined
",
  "pass": false,
  "testName": "toEditMessage",
}
`;
